# SHCLogo-RSDKv5Decomp

./: CMakeLists.txt  README.md
SHCLogo/: LogoSetup.h  ModConfig.h  SHCLogo.c  dllmain.c
